Designing sub navigation menu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
                                     <span>solutions</span>
                                     <ion-icon name="chevron-down"></ion-icon>
                                 </a>
+                                <ul class="sub-menu">
+                                    <li class="sub-menu-item">
+                                        <h4 class="title">book a demo</h4>
+                                        <p class="content">Get a guided walkthrough of our platform</p>
+                                    </li>
+                                    <li class="sub-menu-item">
+                                        <h4 class="title">graphic design</h4>
+                                        <p class="content">Get a guided walkthrough of our platform</p>
+                                    </li>
+                                    <li class="sub-menu-item">
+                                        <h4 class="title">custom illustrations</h4>
+                                        <p class="content">Get a guided walkthrough of our platform</p>
+                                    </li>
+                                    <li class="sub-menu-item">
+                                        <h4 class="title">presentation design</h4>
+                                        <p class="content">Get a guided walkthrough of our platform</p>
+                                    </li>
+                                    <li class="sub-menu-item">
+                                        <h4 class="title">motion graphics</h4>
+                                        <p class="content">Get a guided walkthrough of our platform</p>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu-item">
                                 <a href="#">
